<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <include
            layout="@layout/toolbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/about1"
            android:textAlignment="center"
            android:textColor="@color/my_primary"
            android:textSize="15sp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:text="@string/about2"
            android:textAlignment="center"
            android:textColor="@color/my_primary"
            android:textSize="15sp" />

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@color/my_primary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/my_primary"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linkedin"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/my_primary"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/github"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/my_primary"
            android:textStyle="bold"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_gravity="center"
            android:layout_marginTop="350dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/nav_drawer"/>

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>